Fix button alignment when loading

--- a/client/src/containers/GenerateLinks/GenerateLinks.module.scss
+++ b/client/src/containers/GenerateLinks/GenerateLinks.module.scss
@@ -8,3 +8,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.ButtonsLoading {
+  display: flex;
+  justify-content: flex-end;
+}
